--- a/Kaiserreich Korean Translation/localisation/KR_Bohemia_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Bohemia_l_english.yml
@@ -1,23 +1,24 @@
-﻿l_english:
+l_english:
 
 ### Parties ###
-BOM_totalist_party:0 "체코 전체주의당"
-BOM_totalist_party_long:0 "체코 전체주의당"
-BOM_syndicalist_party:0 "체코 생디칼리스트당"
-BOM_syndicalist_party_long:0 "체코 생디칼리스트당"
-BOM_radical_socialist_party:0 "체코 사회당"
-BOM_radical_socialist_party_long:0 "체코 사회당"
-BOM_social_democrat_party:0 "체코 사회민주당"
-BOM_social_democrat_party_long:0 "체코 사회민주당"
-BOM_social_liberal_party:0 "체코 국민사회당"
-BOM_social_liberal_party_long:0 "체코 국민사회당"
-BOM_market_liberal_party:0 "국민 자유당"
-BOM_market_liberal_party_long:0 "국민 자유당"
-BOM_social_conservative_party:0 "체코 민중당"
-BOM_social_conservative_party_long:0 "체코 민중당"
-BOM_authoritarian_democrat_party:0 "체코 국민민주당"
-BOM_authoritarian_democrat_party_long:0 "체코 국민민주당"
-BOM_paternal_autocrat_party:0 "국민당"
-BOM_paternal_autocrat_party_long:0 "국민당"
-BOM_national_populist_party:0 "국민통일당"
-BOM_national_populist_party_long:0 "국민통일당"
+CZE_totalist_party:0 "RSP"
+CZE_totalist_party_long:0 "Revoluční skupina předvoj"
+CZE_syndicalist_party:0 "FČA"
+CZE_syndicalist_party_long:0 "Federace českých anarchosyndikalistů"
+CZE_radical_socialist_party:0 "NRSDS"
+CZE_radical_socialist_party_long:0 "Neodvislá radikální sociálně demokratická strana"
+CZE_social_democrat_party:0 "SDSD"
+CZE_social_democrat_party_long:0 "Sociálně demokratická strana dělnická"
+CZE_social_liberal_party:0 "Realisté"
+CZE_social_liberal_party_long:0 "Česká strana pokroková"
+CZE_market_liberal_party:0 "Mladočeši"
+CZE_market_liberal_party_long:0 "Národní strana svobodomyslná"
+CZE_social_conservative_party:0 "KSS"
+CZE_social_conservative_party_long:0 "Křesťansko-sociální strana"
+CZE_authoritarian_democrat_party:0 "AS"
+CZE_authoritarian_democrat_party_long:0 "Agrární strana"
+CZE_paternal_autocrat_party:0 "NS"
+CZE_paternal_autocrat_party_long:0 "Národní sjednocení"
+CZE_national_populist_party:0 "NL"
+CZE_national_populist_party_long:0 "Národní liga"
+
