--- a/Kaiserreich Korean Translation/localisation/KR_Countries_Cosmetic_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Countries_Cosmetic_l_english.yml
@@ -751,6 +751,39 @@ AUS_GER_totalist:0 "독일 제국"
 AUS_GER_totalist_ADJ:0 "독일"
 AUS_GER_totalist_DEF:0 "독일 제국"
 
+
+CZE_habsburg_totalist:0 "보헤미아 사회주의 공화국"
+CZE_habsburg_totalist_ADJ:0 "보헤미아"
+CZE_habsburg_totalist_DEF:0 "the 보헤미아 사회주의 공화국"
+CZE_habsburg_syndicalist:0 "보헤미아 사회주의 공화국"
+CZE_habsburg_syndicalist_ADJ:0 "보헤미아"
+CZE_habsburg_syndicalist_DEF:0 "보헤미아 사회주의 공화국"
+CZE_habsburg_radical_socialist:0 "보헤미아 사회주의 공화국"
+CZE_habsburg_radical_socialist_ADJ:0 "보헤미아"
+CZE_habsburg_radical_socialist_DEF:0 "보헤미아 사회주의 공화국"
+CZE_habsburg_social_democrat:0 "보헤미아 공화국"
+CZE_habsburg_social_democrat_ADJ:0 "보헤미아"
+CZE_habsburg_social_democrat_DEF:0 "보헤미아 공화국"
+CZE_habsburg_social_liberal:0 "보헤미아"
+CZE_habsburg_social_liberal_ADJ:0 "보헤미아"
+CZE_habsburg_social_liberal_DEF:0 "보헤미아"
+CZE_habsburg_market_liberal:0 "보헤미아"
+CZE_habsburg_market_liberal_ADJ:0 "보헤미아"
+CZE_habsburg_market_liberal_DEF:0 "보헤미아"
+CZE_habsburg_social_conservative:0 "보헤미아"
+CZE_habsburg_social_conservative_ADJ:0 "보헤미아"
+CZE_habsburg_social_conservative_DEF:0 "보헤미아"
+CZE_habsburg_authoritarian_democrat:0 "보헤미아"
+CZE_habsburg_authoritarian_democrat_ADJ:0 "보헤미아"
+CZE_habsburg_authoritarian_democrat_DEF:0 "보헤미아"
+CZE_habsburg_paternal_autocrat:0 "보헤미아"
+CZE_habsburg_paternal_autocrat_ADJ:0 "보헤미아"
+CZE_habsburg_paternal_autocrat_DEF:0 "보헤미아"
+CZE_habsburg_national_populist:0 "보헤미아"
+CZE_habsburg_national_populist_ADJ:0 "보헤미아"
+CZE_habsburg_national_populist_DEF:0 "보헤미아"
+
+
 GEO_transcaucasian_authoritarian_democrat:0 "트랜스코카시아 사회주의공화국"
 GEO_transcaucasian_authoritarian_democrat_ADJ:0 "트랜스코카시아"
 GEO_transcaucasian_authoritarian_democrat_DEF:0 "트랜스코카시아 사회주의공화국"
@@ -906,13 +939,6 @@ BAT_FED_totalist:0 "발트 연합"
 BAT_FED_totalist_ADJ:0 "발트"
 BAT_FED_totalist_DEF:0 "발트 연합"
 
-BAT_GER_authoritarian_democrat:0 "발트 국"
-BAT_GER_authoritarian_democrat_ADJ:0 "발트"
-BAT_GER_authoritarian_democrat_DEF:0 "발트 국"
-BAT_GER_paternal_autocrat:0 "발트 공작령"
-BAT_GER_paternal_autocrat_ADJ:0 "발트"
-BAT_GER_paternal_autocrat_DEF:0 "발트 공작령"
-
 ITA_kingdom_authoritarian_democrat:0 "이탈리아 왕국"
 ITA_kingdom_authoritarian_democrat_ADJ:0 "이탈리아"
 ITA_kingdom_authoritarian_democrat_DEF:0 "이탈리아 왕국"
@@ -1005,6 +1031,37 @@ TSC_syndicalist_DEF:0 "양 시칠리아 왕국"
 TSC_totalist:0 "양 시칠리아 왕국"
 TSC_totalist_ADJ:0 "시칠리아"
 TSC_totalist_DEF:0 "양 시칠리아 왕국"
+
+ILL_totalist:0 "일리리아 사회주의 공화국"
+ILL_totalist_ADJ:0 "일리리아"
+ILL_totalist_DEF:0 "일리리아 사회주의 공화국"
+ILL_syndicalist:0 "일리리아 사회주의 공화국"
+ILL_syndicalist_ADJ:0 "일리리아"
+ILL_syndicalist_DEF:0 "일리리아 사회주의 공화국"
+ILL_radical_socialist:0 "일리리아 사회주의 공화국"
+ILL_radical_socialist_ADJ:0 "일리리아"
+ILL_radical_socialist_DEF:0 "일리리아 사회주의 공화국"
+ILL_social_democrat:0 "일리리아"
+ILL_social_democrat_ADJ:0 "일리리아"
+ILL_social_democrat_DEF:0 "일리리아"
+ILL_social_liberal:0 "일리리아"
+ILL_social_liberal_ADJ:0 "일리리아"
+ILL_social_liberal_DEF:0 "일리리아"
+ILL_market_liberal:0 "일리리아"
+ILL_market_liberal_ADJ:0 "일리리아"
+ILL_market_liberal_DEF:0 "일리리아"
+ILL_social_conservative:0 "일리리아"
+ILL_social_conservative_ADJ:0 "일리리아"
+ILL_social_conservative_DEF:0 "일리리아"
+ILL_authoritarian_democrat:0 "일리리아"
+ILL_authoritarian_democrat_ADJ:0 "일리리아"
+ILL_authoritarian_democrat_DEF:0 "일리리아"
+ILL_paternal_autocrat:0 "일리리아"
+ILL_paternal_autocrat_ADJ:0 "일리리아"
+ILL_paternal_autocrat_DEF:0 "일리리아"
+ILL_national_populist:0 "일리리아"
+ILL_national_populist_ADJ:0 "일리리아"
+ILL_national_populist_DEF:0 "일리리아"
 
 ITR_authoritarian_democrat:0 "이탈리아 공화국"
 ITR_authoritarian_democrat_ADJ:0 "이탈리아"
@@ -2280,37 +2337,6 @@ TRM_RUS_paternal_autocrat_DEF:0 "러시아 공화국"
 TRM_RUS_national_populist:0 "러시아 공화국"
 TRM_RUS_national_populist_ADJ:0 "러시아"
 TRM_RUS_national_populist_DEF:0 "러시아 공화국"
-
-RUS_TRM_totalist:0 "러시아 연방"
-RUS_TRM_totalist_ADJ:0 "러시아"
-RUS_TRM_totalist_DEF:0 "러시아 연방"
-RUS_TRM_radical_socialist:0 "러시아 사회주의공화국"
-RUS_TRM_radical_socialist_ADJ:0 "러시아"
-RUS_TRM_radical_socialist_DEF:0 "러시아 사회주의공화국"
-RUS_TRM_syndicalist:0 "러시아 코뮌"
-RUS_TRM_syndicalist_ADJ:0 "러시아"
-RUS_TRM_syndicalist_DEF:0 "러시아 코뮌"
-RUS_TRM_social_democrat:0 "러시아 연방공화국"
-RUS_TRM_social_democrat_ADJ:0 "러시아"
-RUS_TRM_social_democrat_DEF:0 "러시아 연방공화국"
-RUS_TRM_social_liberal:0 "러시아 공화국"
-RUS_TRM_social_liberal_ADJ:0 "러시아"
-RUS_TRM_social_liberal_DEF:0 "러시아 공화국"
-RUS_TRM_market_liberal:0 "러시아 공화국"
-RUS_TRM_market_liberal_ADJ:0 "러시아"
-RUS_TRM_market_liberal_DEF:0 "러시아 공화국"
-RUS_TRM_social_conservative:0 " 연방공화국"
-RUS_TRM_social_conservative_ADJ:0 "러시아"
-RUS_TRM_social_conservative_DEF:0 " 연방공화국"
-RUS_TRM_authoritarian_democrat:0 "러시아국"
-RUS_TRM_authoritarian_democrat_ADJ:0 "러시아"
-RUS_TRM_authoritarian_democrat_DEF:0 "러시아국"
-RUS_TRM_paternal_autocrat:0 "러시아국"
-RUS_TRM_paternal_autocrat_ADJ:0 "러시아"
-RUS_TRM_paternal_autocrat_DEF:0 "러시아국"
-RUS_TRM_national_populist:0 "러시아국"
-RUS_TRM_national_populist_ADJ:0 "러시아"
-RUS_TRM_national_populist_DEF:0 "러시아국"
 
 MAD_DRAV_authoritarian_democrat:0 "드라비다 나두"
 MAD_DRAV_authoritarian_democrat_ADJ:0 "드라비다"
@@ -3603,3 +3629,34 @@ FOP_WIN_ARG_paternal_autocrat_DEF:0 "아르헨티나"
 FOP_WIN_ARG_national_populist:0 "아르헨티나"
 FOP_WIN_ARG_national_populist_ADJ:0 "아르헨티나"
 FOP_WIN_ARG_national_populist_DEF:0 "아르헨티나"
+
+DELETTHEJAPENESEEASTINDIES_totalist:0 "누산타라 코뮌"
+DELETTHEJAPENESEEASTINDIES_totalist_ADJ:0 "누산타라"
+DELETTHEJAPENESEEASTINDIES_totalist_DEF:0 "누산타라 코뮌"
+DELETTHEJAPENESEEASTINDIES_syndicalist:0 "누산타라 코뮌"
+DELETTHEJAPENESEEASTINDIES_syndicalist_ADJ:0 "누산타라"
+DELETTHEJAPENESEEASTINDIES_syndicalist_DEF:0 "누산타라 코뮌"
+DELETTHEJAPENESEEASTINDIES_radical_socialist:0 "인술인디아"
+DELETTHEJAPENESEEASTINDIES_radical_socialist_ADJ:0 "인술인디아"
+DELETTHEJAPENESEEASTINDIES_radical_socialist_DEF:0 "인술인디아"
+DELETTHEJAPENESEEASTINDIES_social_democrat:0 "인술인디아"
+DELETTHEJAPENESEEASTINDIES_social_democrat_ADJ:0 "인술인디아"
+DELETTHEJAPENESEEASTINDIES_social_democrat_DEF:0 "인술인디아"
+DELETTHEJAPENESEEASTINDIES_social_liberal:0 "인술인디아"
+DELETTHEJAPENESEEASTINDIES_social_liberal_ADJ:0 "인술인디아"
+DELETTHEJAPENESEEASTINDIES_social_liberal_DEF:0 "인술인디아"
+DELETTHEJAPENESEEASTINDIES_market_liberal:0 "인술인디아"
+DELETTHEJAPENESEEASTINDIES_market_liberal_ADJ:0 "인술인디아"
+DELETTHEJAPENESEEASTINDIES_market_liberal_DEF:0 "인술인디아"
+DELETTHEJAPENESEEASTINDIES_social_conservative:0 "인술인디아"
+DELETTHEJAPENESEEASTINDIES_social_conservative_ADJ:0 "인술인디아"
+DELETTHEJAPENESEEASTINDIES_social_conservative_DEF:0 "인술인디아"
+DELETTHEJAPENESEEASTINDIES_authoritarian_democrat:0 "인술인디아"
+DELETTHEJAPENESEEASTINDIES_authoritarian_democrat_ADJ:0 "인술인디아"
+DELETTHEJAPENESEEASTINDIES_authoritarian_democrat_DEF:0 "인술인디아"
+DELETTHEJAPENESEEASTINDIES_paternal_autocrat:0 "인술인디아 이슬람국"
+DELETTHEJAPENESEEASTINDIES_paternal_autocrat_ADJ:0 "인술인디아"
+DELETTHEJAPENESEEASTINDIES_paternal_autocrat_DEF:0 "인술인디아 이슬람국"
+DELETTHEJAPENESEEASTINDIES_national_populist:0 "인술인디아 연방"
+DELETTHEJAPENESEEASTINDIES_national_populist_ADJ:0 "인술인디아"
+DELETTHEJAPENESEEASTINDIES_national_populist_DEF:0 "인술인디아 연방"
