--- a/Kaiserreich Korean Translation/localisation/KR_Countries_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Countries_l_english.yml
@@ -713,37 +713,6 @@ BOL_national_populist:0 "팔랑해주의 볼리비아"
 BOL_national_populist_ADJ:0 "볼리비아"
 BOL_national_populist_DEF:0 "팔랑해주의 볼리비아"
 
-BOM_totalist:0 "보헤미아 사회주의 공화국"
-BOM_totalist_ADJ:0 "보헤미아"
-BOM_totalist_DEF:0 "보헤미아 사회주의 공화국"
-BOM_syndicalist:0 "보헤미아 사회주의 공화국"
-BOM_syndicalist_ADJ:0 "보헤미아"
-BOM_syndicalist_DEF:0 "보헤미아 사회주의 공화국"
-BOM_radical_socialist:0 "보헤미아 사회주의 공화국"
-BOM_radical_socialist_ADJ:0 "보헤미아"
-BOM_radical_socialist_DEF:0 "보헤미아 사회주의 공화국"
-BOM_social_democrat:0 "보헤미아 공화국"
-BOM_social_democrat_ADJ:0 "보헤미아"
-BOM_social_democrat_DEF:0 "보헤미아 공화국"
-BOM_social_liberal:0 "보헤미아"
-BOM_social_liberal_ADJ:0 "보헤미아"
-BOM_social_liberal_DEF:0 "보헤미아"
-BOM_market_liberal:0 "보헤미아"
-BOM_market_liberal_ADJ:0 "보헤미아"
-BOM_market_liberal_DEF:0 "보헤미아"
-BOM_social_conservative:0 "보헤미아"
-BOM_social_conservative_ADJ:0 "보헤미아"
-BOM_social_conservative_DEF:0 "보헤미아"
-BOM_authoritarian_democrat:0 "보헤미아"
-BOM_authoritarian_democrat_ADJ:0 "보헤미아"
-BOM_authoritarian_democrat_DEF:0 "보헤미아"
-BOM_paternal_autocrat:0 "보헤미아"
-BOM_paternal_autocrat_ADJ:0 "보헤미아"
-BOM_paternal_autocrat_DEF:0 "보헤미아"
-BOM_national_populist:0 "보헤미아"
-BOM_national_populist_ADJ:0 "보헤미아"
-BOM_national_populist_DEF:0 "보헤미아"
-
 BOR_totalist:0 "칼리만탄 코뮌"
 BOR_totalist_ADJ:0 "보르네오"
 BOR_totalist_DEF:0 "칼리만탄 코뮌"
@@ -1705,36 +1674,36 @@ CYP_national_populist:0 "키프로스 제국"
 CYP_national_populist_ADJ:0 "키프로스"
 CYP_national_populist_DEF:0 "키프로스 제국"
 
-CZE_totalist:0 "체코 공화국"
+CZE_totalist:0 "체코"
 CZE_totalist_ADJ:0 "체코"
-CZE_totalist_DEF:0 "체코 공화국"
-CZE_syndicalist:0 "체코 공화국"
+CZE_totalist_DEF:0 "체코"
+CZE_syndicalist:0 "체코"
 CZE_syndicalist_ADJ:0 "체코"
-CZE_syndicalist_DEF:0 "체코 공화국"
-CZE_radical_socialist:0 "체코 공화국"
+CZE_syndicalist_DEF:0 "체코"
+CZE_radical_socialist:0 "체코"
 CZE_radical_socialist_ADJ:0 "체코"
-CZE_radical_socialist_DEF:0 "체코 공화국"
-CZE_social_democrat:0 "체코 공화국"
+CZE_radical_socialist_DEF:0 "체코"
+CZE_social_democrat:0 "체코"
 CZE_social_democrat_ADJ:0 "체코"
-CZE_social_democrat_DEF:0 "체코 공화국"
-CZE_social_liberal:0 "보헤미아"
-CZE_social_liberal_ADJ:0 "보헤미아"
-CZE_social_liberal_DEF:0 "보헤미아"
+CZE_social_democrat_DEF:0 "체코"
+CZE_social_liberal:0 "체코"
+CZE_social_liberal_ADJ:0 "체코"
+CZE_social_liberal_DEF:0 "체코"
 CZE_market_liberal:0 "보헤미아"
 CZE_market_liberal_ADJ:0 "보헤미아"
 CZE_market_liberal_DEF:0 "보헤미아"
-CZE_social_conservative:0 "체코 공화국"
+CZE_social_conservative:0 "체코"
 CZE_social_conservative_ADJ:0 "체코"
-CZE_social_conservative_DEF:0 "체코 공화국"
-CZE_authoritarian_democrat:0 "보헤미아 왕국"
-CZE_authoritarian_democrat_ADJ:0 "보헤미아"
-CZE_authoritarian_democrat_DEF:0 "보헤미아 왕국"
-CZE_paternal_autocrat:0 "보헤미아 왕국"
-CZE_paternal_autocrat_ADJ:0 "보헤미아"
-CZE_paternal_autocrat_DEF:0 "보헤미아 왕국"
-CZE_national_populist:0 "보헤미아 왕국"
-CZE_national_populist_ADJ:0 "보헤미아"
-CZE_national_populist_DEF:0 "보헤미아 왕국"
+CZE_social_conservative_DEF:0 "체코"
+CZE_authoritarian_democrat:0 "체코"
+CZE_authoritarian_democrat_ADJ:0 "체코"
+CZE_authoritarian_democrat_DEF:0 "체코"
+CZE_paternal_autocrat:0 "체코"
+CZE_paternal_autocrat_ADJ:0 "체코"
+CZE_paternal_autocrat_DEF:0 "체코"
+CZE_national_populist:0 "체코"
+CZE_national_populist_ADJ:0 "체코"
+CZE_national_populist_DEF:0 "체코"
 
 DAH_totalist:0 "다호메이 코뮌"
 DAH_totalist_ADJ:0 "다호메이"
@@ -3192,37 +3161,6 @@ IKH_paternal_autocrat_DEF:0 "이크완"
 IKH_national_populist:0 "이크완"
 IKH_national_populist_ADJ:0 "이크완"
 IKH_national_populist_DEF:0 "이크완"
-
-ILL_totalist:0 "일리리아 사회주의 공화국"
-ILL_totalist_ADJ:0 "일리리아"
-ILL_totalist_DEF:0 "일리리아 사회주의 공화국"
-ILL_syndicalist:0 "일리리아 사회주의 공화국"
-ILL_syndicalist_ADJ:0 "일리리아"
-ILL_syndicalist_DEF:0 "일리리아 사회주의 공화국"
-ILL_radical_socialist:0 "일리리아 사회주의 공화국"
-ILL_radical_socialist_ADJ:0 "일리리아"
-ILL_radical_socialist_DEF:0 "일리리아 사회주의 공화국"
-ILL_social_democrat:0 "일리리아"
-ILL_social_democrat_ADJ:0 "일리리아"
-ILL_social_democrat_DEF:0 "일리리아"
-ILL_social_liberal:0 "일리리아"
-ILL_social_liberal_ADJ:0 "일리리아"
-ILL_social_liberal_DEF:0 "일리리아"
-ILL_market_liberal:0 "일리리아"
-ILL_market_liberal_ADJ:0 "일리리아"
-ILL_market_liberal_DEF:0 "일리리아"
-ILL_social_conservative:0 "일리리아"
-ILL_social_conservative_ADJ:0 "일리리아"
-ILL_social_conservative_DEF:0 "일리리아"
-ILL_authoritarian_democrat:0 "일리리아"
-ILL_authoritarian_democrat_ADJ:0 "일리리아"
-ILL_authoritarian_democrat_DEF:0 "일리리아"
-ILL_paternal_autocrat:0 "일리리아"
-ILL_paternal_autocrat_ADJ:0 "일리리아"
-ILL_paternal_autocrat_DEF:0 "일리리아"
-ILL_national_populist:0 "일리리아"
-ILL_national_populist_ADJ:0 "일리리아"
-ILL_national_populist_DEF:0 "일리리아"
 
 INC_totalist:0 "인도차이나 연합"
 INC_totalist_ADJ:0 "인도차이나"
