--- a/Kaiserreich Korean Translation/localisation/KR_Croatia_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Croatia_l_english.yml
@@ -1,23 +1,54 @@
 l_english:
 
 ### Parties ###
-CRO_totalist_party:0 "크로아티아 생디칼리즘 연맹"
-CRO_radical_socialist_party:0 "크로아티아 생디칼리즘당"
-CRO_syndicalist_party:0 "크로아티아 독립 노동자당"
-CRO_social_democrat_party:0 "크로아티아 사회민주당"
-CRO_social_liberal_party:0 "독립민주당"
-CRO_market_liberal_party:0 "크로아티아 공동체"
-CRO_social_conservative_party:0 "크로아티아 농민당"
-CRO_authoritarian_democrat_party:0 "크로아티아 인민당"
-CRO_paternal_autocrat_party:0 "크로아티아당의 권리"
-CRO_national_populist_party:0 "우스타샤"
-CRO_totalist_party_long:0 "크로아티아 생디칼리즘 연맹"
-CRO_radical_socialist_party_long:0 "크로아티아 생디칼리즘당" #(Syndicalist Party of Croatia)
-CRO_syndicalist_party_long:0 "크로아티아 독립 노동자당" #(Independent Workers' Party of Croatia)
-CRO_social_democrat_party_long:0 "크로아티아 사회민주당" #(Social Democratic Party of Croatia)
-CRO_social_liberal_party_long:0 "독립민주당" #(Independent Democratic Party)
-CRO_market_liberal_party_long:0 "크로아티아 공동체" #(Croatian Community)
-CRO_social_conservative_party_long:0 "크로아티아 농민당" #(Croatian Peasant Party)
-CRO_authoritarian_democrat_party_long:0 "크로아티아 인민당" #(Croatian Popular Party)
-CRO_paternal_autocrat_party_long:0 "크로아티아당의 권리" #(Croatian Party of Rights)
-CRO_national_populist_party_long:0 "우스타샤" #(Croatian revolutionary movement)
+CRO_totalist_party:0 "SRP(p)"
+CRO_totalist_party_long:0 "Socijalistička radnička partija (prèdvodnīci)"
+CRO_syndicalist_party:0 "SRP(r)"
+CRO_syndicalist_party_long:0 "Socijalistička radnička partija (revolucionarni)"
+CRO_radical_socialist_party:0 "SRP(c)"
+CRO_radical_socialist_party_long:0 "Socijalistička radnička partija (centrumaši)"
+CRO_social_democrat_party:0 "SDSH"
+CRO_social_democrat_party_long:0 "Socijaldemokratska stranka Hrvatske"
+CRO_social_liberal_party:0 "HPSS"
+CRO_social_liberal_party_long:0 "Hrvatska pučka seljačka stranka"
+CRO_market_liberal_party:0 "HSK"
+CRO_market_liberal_party_long:0 "Hrvatsko-srpska koalicija"
+CRO_social_conservative_party:0 "HKSSP"
+CRO_social_conservative_party_long:0 "Hrvatska kršćansko-socijalna stranka prava"
+CRO_authoritarian_democrat_party:0 "NS"
+CRO_authoritarian_democrat_party_long:0 "Narodna stranka"
+CRO_paternal_autocrat_party:0 "HSP"
+CRO_paternal_autocrat_party_long:0 "Hrvatska stranka prava"
+CRO_national_populist_party:0 "HRP"
+CRO_national_populist_party_long:0 "Hrvatski revolucionarni pokret"
+
+### Ideas ###
+ILL_croatian_command:0 "Croatian Officers"
+ILL_croatian_command_desc:0 "The Croatian people fought to make an Illyria free of Austria a reality, while the rest of the so called Illyrians hid in their cities and did nothing. It is for this reason that we must restrict all officer position to Croatians at the cost of alienating the rest of our countrymen."
+
+ILL_federated_army:0 "United Officer Corp"
+ILL_federated_army_desc:0 "Despite all odds, we have managed to win against all who sought to destroy our fledgling nation, but there is much still left to do. All the military officers of Illyria must be pooled into a single and united Illyrian Officer Corp."
+
+### Events ###
+illyria.1.t:0 "Kingdom of Illyria"
+illyria.1.d:0 "The Triune Kingdom of Illyria, which consists of the former Kingdom of Croatia-Slavonia, Kingdom of Dalmatia and Condominium of Bosnia and Herzegovina was proclaimed after the Crisis in Austro-Hungary and German Intervention in 1922. The creation of Illyria was proposed by the loyal to Vienna Croatian aristocrats and officers of the Austro-Hungarian Army, who promised to be loyal to the Kaiser Otto and Austria, but claimed more autonomy and the end of the Hungarian rule on the lands of the South Slavs. Though the Triune Kingdom should have become a home for the Catholic Croats, Orthodox Serbs and Muslim Bosniaks, in fact there are a lot of controversies between these nations. The Serbs want to reunite with their Serbian Motherland, the Bosniaks want to get more independence, and the Croats, who have a relative majority in the country, want to strengthen their position in the country and reorganise it into the Great Croatia. But now the Austrians help us to secure the order of our Balkan Kingdom."
+illyria.1.a:0 "Our Beautiful Homeland!"
+
+illyria.2.t:0 "Matica ilirska"
+illyria.2.d:0 "'Matica ilirska' ('Parent body of the Illyrians') is the oldest educational organisation in Illyria, which started its activity as a book publishing company in 1842. The main aim of 'Matica' is the promotion of the Illyrian culture and language and also support to the mutual understanding between the nations of Illyria. With help of the 'Matica ilirska' the leaders of Illyria try to form a well-educated and an united Illyrian nation. Now one of the most important missions of the organisation is the codification of the Illyrian language standard. Though it has been a hard work, but it seems that the most famous Illyrian writers and linguists have finally negotiated, which rules of the language our young generation will learn at schools. The creation of the united Illyrian nation is closer now!"
+illyria.2.a:0 "Wistful is my Slavic soul, I'm Illyrian!"
+
+illyria.3.t:0 "Status of Montenegro"
+illyria.3.d:0 "Montenegro was a small, but independent kingdom, which even the Ottoman Empire couldn't annex. But it was occupied in 1916 by the forces of Austro-Hungary and was incorporated into Illyria in 1922. But even now the Orthodox Montenegrians have a large autonomy in our state and accepted only these orders from Zagreb, which can't affect the life of this distant part of our country. More over, many of the local citizens are friendly to Serbia - our main enemy on the Balkans. We should keep it in mind, since any violation of the Montenegrian rights can provoke a crisis between Illyria and Serbia and even lead to a new Balkan war."
+illyria.3.a:0 "Don't count on them."
+
+illyria.4.t:0 "Sarajevo Agreement"
+illyria.4.d:0 "The nations of our Triune Kingdom use one South Slavic language, but the Croat, Serbian and Bosnian versions of it have some differences. More over, the Serbs use the Cyrillic script, while the Croats and Bosniaks prefer the Latin script. 'Matica ilirska' has already established the united standards of the language, which will be used in our Kingdom, but we still don't know, how to name our language. We can name it 'Croatian' and use the Latin script, since the Croats constitute the majority in our country with 60% of the population. Another possible name is the 'Serbo-Croatian' with both Cyrillic and Latin scripts to represent the role of the Serbs, who are the main minority in Illyria with 30% of our citizens. Or we can name the language 'Illyrian' to encourage the unification of our people and use the Latin script."
+illyria.4.a:0 "The Croat language is the only one in Illyria!"
+illyria.4.b:0 "Long live Brotherhood and Unity - the Serbo-Croatian!"
+illyria.4.c:0 "We are the Illyrians - and we speak Illyrian!"
+
+illyria.5.t:0 "Highway 'Unity'"
+illyria.5.d:0 "The construction of the highway 'Unity' was proposed by our prime minister in order to connect the biggest cities of the Illyria - Zagreb, Sarajevo and Podgorica. With the Austrian subsidies we will be able to hire enough workers and complete the construction soon. This project will also help us to reduce the unemployment rate in many our regions and revive the construction market in the Kingdom."
+illyria.5.a:0 "We worked, we work and we will work even more!"
+
