--- a/Kaiserreich Korean Translation/localisation/KR_Dahomey_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Dahomey_l_english.yml
@@ -42,7 +42,7 @@ DAH_leader_lead_desc:0 "Historically our Leaders stood alongside our generals; t
 DAH_leader_lead_unlock:0 "Gain a spirit granting more experience at war at the cost of daily pp."
 DAH_importing_arms:0 "Import Foreign Arms"
 DAH_importing_arms_desc:0 "We have a history of importing foreign arms.\nShopping around for foreign arms will supplement our small arms production."
-DAH_import_arms_loc:0 "Enable a decision to buy arms from another nation that has enough in stock."
+DAH_import_arms_loc:0 "Enable a decision to buy arms from another nation that has enough in stock.\n"
 DAH_agaja:0 "Reinstate Agaja's Dowry"
 DAH_agaja_desc:0 "We shall reinstate the dowry, a monetary bonus for our soldiers that King Agaja created many years ago.\nEven though it will cost us money, our men will be more willing to fight."
 DAH_amazons:0 "Dahomey's Amazons"
@@ -93,14 +93,20 @@ dah.007.d:0 "We got word from [DAH_gun_target.GetNameDef] about the guns!"
 dah.007.a:0 "Succes"
 dah.007.b:0 "Damnit"
 
+DAH_import_arms_allowed:0 "Has taken focus Import Arms"
+
 #Ideas
-DAH_gold_mining:0 "금 채굴"
+DAH_gold_mining:0 "Gold Mining"
 DAH_toll:0 "Toll Roads"
 DAH_agaja:0 "Agaja's Dowry"
 DAH_leading_leader:0 "Dahomey Leader Traditions"
 DAH_amazons_idea:0 "The Ahosi"
-DAH_salvage:0 "독일인 구제"
+DAH_salvage:0 "German Salvage"
 DAH_french_prod_id:0 "French Engineering Expertise"
 DAH_french_food:0 "French Agricultural Expertise"
 DAH_french_war:0 "French War Expertise"
 DAH_french_civil:0 "French Civil Expertise"
+
+#Decisions
+DAH_General:0 "Dahomey Decisions"
+DAH_Import_Arms:0 "Import Arms"
