--- a/Kaiserreich Korean Translation/localisation/KR_Dutch_East_Indies_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Dutch_East_Indies_l_english.yml
@@ -207,7 +207,7 @@
  dei_random.3.a:0 "Sow Discord!"
  dei_random.3.b:0 "Sabotage their arms!"
  dei_random.4.t:0 "Nationalists fight each other!"
- dei_random.4.d:0 "That the nationalists and the syndicalists didn't really like eachother was clear before, but now guerilla's of both sides have started fighting eachother in the countryside. The KNIL stands ready to intervene, but some people say it would perhaps be better to let them weaken eachother while we sit back and relax, as that will both thin out their numbers and make them less likely to reconcile."
+ dei_random.4.d:0 "The Fact That the nationalists and the syndicalists didn't really like eachother was clear before, but now guerilla's of both sides have started fighting eachother in the countryside. The KNIL stands ready to intervene, but some people say it would perhaps be better to let them weaken eachother while we sit back and relax, as that will both thin out their numbers and make them less likely to reconcile."
  dei_random.4.a:0 "Intervene immediately"
  dei_random.4.b:0 "Bets are on! Who will win?"
  dei_random.5.t:0 "Regent murdered"
