--- a/Kaiserreich Korean Translation/localisation/KR_Argentina_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Argentina_l_english.yml
@@ -995,7 +995,7 @@ argcar.30.d:0 "라미레즈가 대통령직에 올랐고 노동 조합원들과 
 argcar.30.a:0 "아무도 정의를 피할 수 없다!"
 
 argcar.31.t:0 "FOIC 단속"
-argcar.31.d:0 "Federación Obrera de la Industria de la Carne 또는 육류 산업 연맹은 오늘 아침 대통령령으로 금지되었으며, 이로 인해 베리오스와 아베야네다의 FOIC 사무소 폐쇄와 뒤이은 지도부 폐지가 초래되었고, 가장 주목할 만한 장관은 호세 피터입니다. \n\n 이 조직은 우리나라의 생디칼리스트 세력과 밀접하게 연결되어 있으며, 이전에 그들에 의해 조직된 육류 포장 산업 파업들이 위험한 경제 위기로 이어진 후에 이 조직은 이전 정부에 의해 피해를 입지 않았습니다. 전국적으로 파업에 대한 움직임과 조직적인 대응은 예상되지만 붉은 위협이 통제하는 것을 피하기 위해서는 필요합니다."
+argcar.31.d:0 "Federación Obrera de la Industria de la Carne 또는 육류 산업 노동자 연맹은 오늘 아침 대통령령으로 금지되었으며, 이로 인해 베리오스와 아베야네다의 FOIC 사무소 폐쇄와 뒤이은 지도부 폐지가 초래되었고, 가장 주목할 만한 장관은 호세 피터입니다. \n\n 이 조직은 우리나라의 생디칼리스트 세력과 밀접하게 연결되어 있으며, 이전에 그들에 의해 조직된 육류 포장 산업 파업들이 위험한 경제 위기로 이어진 후에 이 조직은 이전 정부에 의해 피해를 입지 않았습니다. 전국적으로 파업에 대한 움직임과 조직적인 대응은 예상되지만 붉은 위협이 통제하는 것을 피하기 위해서는 필요합니다."
 argcar.31.a:0 "우리는 생디칼리즘이 우리 나라를 앞지르게 할 수 없다!" 
 
 argcar.32.t:0 "CGT의 해산"
