--- a/Kaiserreich Korean Translation/localisation/KR_Argentina_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Argentina_l_english.yml
@@ -83,8 +83,8 @@ ARG_Railway2:0 "독일 철도 국유화"
 ARG_Railway3:0 "아르헨티나 철도공사"
 ARG_COAL_INFRA:0 "예비 추출 연구"
 ARG_Trade_Agreement:0 "아르헨티나 무역 협정"
-ARG_Free_Thought:0 "Encouraged Free Thought"
-ARG_Argentine_Republic:0 "For the Republic!"
+ARG_Free_Thought:0 "격려된 자유사상"
+ARG_Argentine_Republic:0 "공화국을 위하여!"
 
 ARG_CHILE_STOP_BEING_A_TWAT:0 "아르헨티나-칠레 전쟁"
 ARG_prepared:0 "아르헨티나 맹목적 애국주의"
@@ -102,15 +102,15 @@ ARG_Foreign_Tech:0 "외국 기술 연구"
 ARG_Military_Cliques:0 "군사 파벌"
 
 ARG_interservice_rivalry_army_dominant:0 "군부 경쟁 - 육군 지배"
-ARG_interservice_rivalry_army_dominant_desc:0 "§RLetting either side of the Armed forces get too much influence has severe consequences and could even lead to a military coup§!"
+ARG_interservice_rivalry_army_dominant_desc:0 "§R어느 한쪽에 너무 많은 영향력을 갖게 하는 것은 심각한 결과를 초래하고 심지어 군사 쿠데타를 초래할 수도 있습니다§!"
 ARG_interservice_rivalry_army_strengthened:0 "군부 경쟁 - 육군 우세"
-ARG_interservice_rivalry_army_strengthened_desc:0 "§RLetting either side of the Armed forces get too much influence has severe consequences and could even lead to a military coup§!"
+ARG_interservice_rivalry_army_strengthened_desc:0 "§R어느 한쪽에 너무 많은 영향력을 갖게 하는 것은 심각한 결과를 초래하고 심지어 군사 쿠데타를 초래할 수도 있습니다§!"
 ARG_interservice_rivalry_balanced:0 "군부 경쟁 - 균형 잡힌"
-ARG_interservice_rivalry_balanced_desc:0 "§RLetting either side of the Armed forces get too much influence has severe consequences and could even lead to a military coup§!"
+ARG_interservice_rivalry_balanced_desc:0 "§R어느 한쪽에 너무 많은 영향력을 갖게 하는 것은 심각한 결과를 초래하고 심지어 군사 쿠데타를 초래할 수도 있습니다§!"
 ARG_interservice_rivalry_navy_strengthened:0 "군부 경쟁 - 해군 우세"
-ARG_interservice_rivalry_navy_strengthened_desc:0 "§RLetting either side of the Armed forces get too much influence has severe consequences and could even lead to a military coup§!"
+ARG_interservice_rivalry_navy_strengthened_desc:0 "§R어느 한쪽에 너무 많은 영향력을 갖게 하는 것은 심각한 결과를 초래하고 심지어 군사 쿠데타를 초래할 수도 있습니다§!"
 ARG_interservice_rivalry_navy_dominant:0 "군부 경쟁 - 해군 지배"
-ARG_interservice_rivalry_navy_dominant_desc:0 "§RLetting either side of the Armed forces get too much influence has severe consequences and could even lead to a military coup§!"
+ARG_interservice_rivalry_navy_dominant_desc:0 "§R어느 한쪽에 너무 많은 영향력을 갖게 하는 것은 심각한 결과를 초래하고 심지어 군사 쿠데타를 초래할 수도 있습니다§!"
 
 ARG_Desertion:0 "광범위한 탈영"
 ARG_Unskilled_Officers:0 "훈련되지 않은 장교"
@@ -550,9 +550,9 @@ argmil.23.t:0 "숙련된 장교 부족"
 argmil.23.d:0 "ARA에서의 낮은 임금과 더 나은 전망으로 인해 많은 젊은 잠재 장교들이 육군에서 떠나 대신 해군 경력을 쌓게 되었습니다. 새로운 인재들의 훈련은 노령화된 부대를 압박하고 있고 잠재적으로 적에 대항하여 우리의 군대를 이끌어 가는 능력에 영향을 미칠 수 있습니다."
 argmil.23.a:0 "골칫거리로군" 
 
-argmil.24.t:0 "Perón Introduces Alberte to the GOU"
-argmil.24.d:0 "In a general staff meeting at El Palomar military base, General Juan Domingo Peron has presented a new member of the GOU for the staff. His name is Bernardino Alberte, a junior officer that graduated recently from the Military Academy with outstanding grades. However, his lack of experience has not given the best impression to the older members of the staff, as well as the fact that Peron is seemingly trying to put people he trusts in positions of power. Despite this, Peron has reassured the Old Guard about his protege's skills, and being one of the most influential and experienced officers of the GOU and the General Staff, there's no real reason to reject Peron's request. After all, the army could always use more talented officers."
-argmil.24.a:0 "Let's hope this doesn't become a common occurrence"
+argmil.24.t:0 "페론이 알베르트를 GOU에 소개하다"
+argmil.24.d:0 "엘 팔로마르 군부대에서 열린 장성급 회담에서 후안 도밍고 페론 장군은 참모들을 위해 GOU의 새로운 일원을 발표했습니다. 그의 이름은 최근 뛰어난 성적으로 육군사관학교를 졸업한 하급 장교 베르나르디노 알베르테입니다. 그러나, 그의 경험 부족은 나이든 참모들뿐만 아니라 페론이 그가 신뢰하는 사람들을 권력자 자리에 앉히려고 하는 것처럼 보인다는 사실에도 최상의 인상을 주지 못했습니다. 그럼에도 불구하고, 페론은 보수파에게 그의 후배의 능력에 대해 안심시켰으며 페론은 GOU와 장군들 중 가장 영향력 있고 경험 많은 장교 중 한 사람이기 때문에 페론의 요청을 거부할 실질적인 이유가 없습니다. 결국, 군대는 항상 더 재능 있는 장교들을 사용할 수 있었습니다."
+argmil.24.a:0 "이것이 흔한 일이 되지 않기를 바란다"
 
 ## War in the Southern Cone ##
 southern.1.t:0 "아르헨티나-칠레 전쟁에 개입?"
@@ -1074,9 +1074,9 @@ argcar.46.b:0 "로베르토 오르티스가 대통령이 되다"
 argcar.46.c:0 "리카르도 발빈이 대통령이 되다"
 argcar.46.e:0 "알리시아 모로 드 후스토가 대통령이 되다"
 
-argcar.47.t:0 "Death of Manuel Carles!"
-argcar.47.d:0 "As our Grand Saviour grew older by the day, many inside our government were awaiting the day he finally passed away. Today is this day as the Saviour of Argentina and conqueror of South America has left out his final breath. With no clear successor to secede him and unclarity whether it should be handled within the party or whether elections should be written out, the Council of Buenos Aires has temporarily taken over power. Consisting of many of Carles' closest associates and the LP inner-party, they will rule the nation with an iron fist until a decision has been made."
-argcar.47.a:0 "We weep for his loss"
+argcar.47.t:0 "마누엘 카를레스의 죽음!"
+argcar.47.d:0 "우리의 위대한 구세주들이 날이 갈수록 나이가 들면서, 우리 정부 내부의 많은 사람들이 그가 마침내 세상을 떠날 날을 기다리고 있었습니다. 오늘은 아르헨티나의 구세주이자 남아메리카 정복자로서 그가 마지막 숨을 거두는 날입니다. 부에노스 아이레스 의회는 그의 뒤를 이을 확실한 후계자가 없고, 그것이 당내에서 다루어져야 하는지 또는 선거를 이루어야 하는지가 명확하지 않아 일시적으로 정권을 장악했습니다. 카를레스와 가장 가까운 동료들과 애국당 내각으로 구성된 사람들은 결정이 내려질 때까지 철권통치를 할 것입니다."
+argcar.47.a:0 "우리는 그의 죽음을 슬퍼한다"
 
 ## Road to Democracy ##
 argdem.1.t:0 "거리에서의 폭력"
