--- a/Kaiserreich Korean Translation/localisation/KR_Argentina_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Argentina_l_english.yml
@@ -850,7 +850,7 @@ argbla.11.a:0 "자금을 할당하라"
 argbla.11.b:0 "우리는 여분의 자원을 쓸 수 없다"
 
 argbla.12.t:0 "아르헨티나 군용 항공 학교 설립"
-argbla.12.d:0 "1912년 8월 10일 로케 센즈 페냐 행정부 하에 설립된 군용 항공 학교는 항공기의 중요성에 부응하고 아르헨티나 1세대 조종사를 훈련시키고 보조금을 지급하기 위해 창설되었습니다. 세계대전 기간 동안 항공의 중요성과 군사 전쟁이 시작됨에 따라 1934년에 항공 학교 확장을 위한 새로운 본부를 건설하기로 합의했습니다. 코르도바 외곽에 위치한 그 학교는 다음 세대의 조종사들을 교육하고 우리에게 우리의 이웃들보다 우월한 지위를 줄 예정입니다."
+argbla.12.d:0 "1912년 8월 10일 로케 사엔즈 페냐 행정부 하에 설립된 군용 항공 학교는 항공기의 중요성에 부응하고 아르헨티나 1세대 조종사를 훈련시키고 보조금을 지급하기 위해 창설되었습니다. 세계대전 기간 동안 항공의 중요성과 군사 전쟁이 시작됨에 따라 1934년에 항공 학교 확장을 위한 새로운 본부를 건설하기로 합의했습니다. 코르도바 외곽에 위치한 그 학교는 다음 세대의 조종사들을 교육하고 우리에게 우리의 이웃들보다 우월한 지위를 줄 예정입니다."
 argbla.12.a:0 "[Root.GetLeader]가 학교를 열었다!"
 
 argbla.13.t:0 "부에노스 아이레스 지하철 확장!"
