--- a/Kaiserreich Korean Translation/localisation/KR_Fengtian_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Fengtian_l_english.yml
@@ -18,9 +18,9 @@ FNG_Unscrupulous_Governance_desc:0 "Despite its claims to the contrary, the Feng
 FNG_Investment_Dearth:0 "Investment Dearth"
 FNG_Investment_Dearth_desc:0 "The economic collapse that followed Fengtian's entry into the Civil Wars severely damaged its fiscal base and financial credibility, leaving the government with few creditors, and private businesses with severely limited options. Few have the confidence to invest in Fengtian, either at home or abroad."
 FNG_Investment_Dearth_Japanese:0 "Limited Chinese Investment"
-FNG_Investment_Dearth_Japanese_desc:0 "Thanks to government incentives Japanese investment has grown, but there is still an overall shortage."
+FNG_Investment_Dearth_Japanese_desc:0 "Thanks to government incentives Japanese investment has grown, but there is still an overall shortage. Local Chinese investment could provide the funds we need."
 FNG_Investment_Dearth_Chinese:0 "Limited Japanese Investment"
-FNG_Investment_Dearth_Chinese_desc:0 "Thanks to government incentives private Chinese investment has grown, but there is still an overall shortage."
+FNG_Investment_Dearth_Chinese_desc:0 "Thanks to government incentives private Chinese investment has grown, but there is still an overall shortage. Japanese investment could provide the funds we need."
 FNG_Year_of_Righteous_Effort:0 "The Year of Righteous Effort"
 FNG_Year_of_Righteous_Effort_desc:0 "With the Grand Marshal's Proclamation, the nation is united in a strenuous effort to prepare for the rigours of war."
 FNG_Land_Reform_Underway:0 "토지 계획 진행"
@@ -1363,7 +1363,7 @@ fengtian.new.158.c:0 "Maybe things will de-escalate"
 fengtian.new.159.t:0 "Fengtian Invades Chahar"
 fengtian.new.159.d:0 "It has never been a secret that Fengtian wanted to reclaim Chahar province, which we brazenly stole from under its nose in the last days of the Chinese Civil Wars, but few expected a sudden invasion, especially without preparatory troop movements for weeks beforehand. War has come to our doorstep."
 fengtian.new.159.a:0 "Right where we like it!"
-fengtiana.new.159.b:0 "Let them have the land!"
+fengtian.new.159.b:0 "Let them have the land!"
 
 fengtian.new.160.t:0 "Confusion at the Border"
 fengtian.new.160.d:0 "Scattered reports suggest that the Fengtian Government has carried out a surprise attack on the trading centre of Duolun in Chahar province, eliciting a fierce response from the local Xilingol League. Skirmishes have erupted all along the Jehol-Chahar border, and neither side seems willing to give ground, but strangely the Fengtian Government itself claims that the attack was been carried out by a rogue general who will shortly be removed from office. Whether this is true or the start of something larger is unclear, but if what they say is true it might be worth striking while they are confused and disorganised."
