--- a/Kaiserreich Korean Translation/localisation/KR_Flanders_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Flanders_l_english.yml
@@ -357,7 +357,7 @@ flnrev.71.d:0 "Due to the endless bickering between the other factions, the Groo
 flnrev.71.a:0 "We must request Dutch aid!"
 
 flnrev.72.t:0 "The Flemish Groot-Nederlandisten Approach Us"
-flnrev.72.d:0 "After the recent independence of Flanders and the dissolution of the old Flandern-Wallonian union, divides between the Council and the Liberation Army have been growing leading to increased unrest. A smaller faction in the Flemish Liberation Army that has emerged from the maelstrom is the Groot-Nederlandisten movement, a group which openly strives for Flemish unification with the Netherlands. While their member count is lower than that of other movements, they enjoy a large intellectual base in Leuven and Ghent that is requesting our government step in and send them military support."
+flnrev.72.d:0 "After the recent independence of Flanders and the dissolution of the old Flandern-Walloon union, divides between the Council and the Liberation Army have been growing leading to increased unrest. A smaller faction in the Flemish Liberation Army that has emerged from the maelstrom is the Groot-Nederlandisten movement, a group which openly strives for Flemish unification with the Netherlands. While their member count is lower than that of other movements, they enjoy a large intellectual base in Leuven and Ghent that is requesting our government step in and send them military support."
 flnrev.72.a:0 "Support the Groot-Nederlandisten."
 flnrev.72.b:0 "Withdraw all connections to the movement."
 
@@ -491,7 +491,7 @@ FLN_Groot_Nederland_Ambition_desc:0 "The Groot-Nederlandisten movement has been 
 FLN_Enact_The_Terneuzen_Treaty:0 "Enact the Treaty of Terneuzen"
 FLN_Enact_The_Terneuzen_Treaty_desc:0 "By enacting the Treaty of Terneuzen we promise to transfer all power to the Dutch government and become a puppet state of Amsterdam until the integration process is done."
 FLN_Accept_Dutch_Constitution:0 "Accept the Dutch Constitution"
-FLN_Accept_Dutch_Constitution_desc:0 "We need to conform to the Dutch constitution now, giving up on the old Flandern-Wallonian mockery of a state."
+FLN_Accept_Dutch_Constitution_desc:0 "We need to conform to the Dutch constitution now, giving up on the old Flandern-Walloon mockery of a state."
 
 FLN_Vlaams_Gewest:0 "Flanders Investment and Trade"
 FLN_Vlaams_Gewest_desc:0 "The Flanders Investment and Trade bureau is an initiative by the Flemish government to revitalise the industry and promote Flemish companies abroad."
@@ -545,5 +545,4 @@ FLN_Secure_Diamond_Trade:0 "Secure the Diamond Trade"
 FLN_Secure_Diamond_Trade_desc:0 "Nearly every diamond on the planet passes through Antwerp where the mostly Jewish population controls the diamond sector. By securing more mining permits from the Mittelafrikan government we can increase the production in Africa and as such the trade at home."
 FLN_Copper_Katanga:0 "Copper from Katanga"
 FLN_Copper_Katanga_desc:0 "Katanga contains large untouched copper reserves which are being exploited by Flemish companies but resources like cobalt and other rare earth elements are just waiting to be exploited by our mining companies." #?
-
 
