--- a/Kaiserreich Korean Translation/localisation/KR_Iceland_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Iceland_l_english.yml
@@ -71,7 +71,6 @@ ice.8.b:0 "거래를 취소하다."
 ice.9.t:0 "아이슬란드가 거래를 취소하다"
 ice.9.d:0 "아이슬란드 정부는 자국의 압력에 굴복하여, 논란이 되고 있는 캐나다와의 무역 협정을 취소했습니다. 이것은 캐나다 사람들이 아이슬란드에 대해 가지고 있는 야망으로 인해 가장 불행할 것입니다..."
 ice.9.a:0 "안타깝군."
-ice.9.b:0 "흥미롭군."
 ice.10.t:0 "레이캬비크 폭동"
 ice.10.d:0 "아이슬란드 정부가 논란이 되고 있는 캐나다와의 무역 협정을 취소하기를 거부한 것은 야당, 사회주의자들, 여러 노조들이 요청한 레이캬비크의 대규모 폭동으로 이어졌습니다. 그들은 그린란드 해안을 따라 바로 어업과 관련된 무역 거래를 즉각 중지하고 아이슬란드의 국가적인 문제에 있어서 반갑지 않은 캐나다의 간섭을 중단할 것을 요구하고 있습니다."
 ice.10.a:0 "망할 폭도들!"
@@ -110,7 +109,6 @@ ice.17.b:0 "선거는 없다!"
 ice.18.t:0 "아이슬란드의 야당 파업"
 ice.18.d:0 "아이슬란드 정부가 선거를 소집하는데 실패한 후, 인민통합당과 국민당 당원들은 정부를 떠났습니다. 시위가 늘어나고 있고 정부 청사 밖에서는 여러명의 무장한 사람들이 목격되었습니다."
 ice.18.a:0 "이건 골치 아픈 일이야."
-ice.18.b:0 "흥미롭군."
 ice.19.t:0 "의회의 시민 물결"
 ice.19.d:0 "인민통합당과 국민당의 당원들은 한 가까운 격분으로 군중을 동요시켰습니다. 시위대가 정부 청사에 난입한 결과 국회 본 회의장 밖으로 나오기도 힘든 실정입니다. 우리 국회 의원들은 혁명의 소리에 동의하고 있습니다."
 ice.19.a:0 "캐나다에 도움을 요청해!"
@@ -131,8 +129,6 @@ ice.22.b:0 "노동자들은 우리의 도움 없이도 성공할 것이다."
 ice.23.t:0 "아이슬란드에 캐나다가 개입하지 않다"
 ice.23.d:0 "아이슬란드 정부의 캐나다 지원 요청은 거부되었습니다. 왕정파의 군대가 떠나고 있고 시위자들은 아이슬란드의 대부분을 점령했습니다. 대부분의 정부 관계자들은 캐나다의 고문들과 함께 오타와로 떠나고 있습니다."
 ice.23.a:0 "끔찍하군!"
-ice.23.b:0 "우리는 뭔가를 해야만 해!"
-ice.23.c:0 "흥미롭군."
 ice.24.t:0 "레이캬비크에서의 캐나다의 승리"
 ice.24.d:0 "아이슬란드로 파견된 캐나다 군은, 레이캬비크를 시위자들로부터 구출할 수 있었습니다. 노동자들도 아이슬란드 정부도 이 사실을 잊지 않을 것입니다."
 ice.24.a:0 "업무로 복귀하라!"
@@ -141,12 +137,9 @@ ice.24.c:0 "생디칼리즘은 또 다시 패배했다."
 ice.25.t:0 "레이캬비크에서 승리한 시위자들"
 ice.25.d:0 "아이슬란드에서 야당과 시위대 간의 동맹은 레이캬비크를 사로잡을 수 있었습니다. 그들은 이제 새로운 생디칼리스트 국가를 건설하고 있습니다."
 ice.25.a:0 "짐 쌀 시간이야..."
-ice.25.b:0 "노동자들이 또 다시 승리한다!"
-ice.25.c:0 "생디칼리즘이 다시 승리를 거두었다."
 ice.26.t:0 "캐나다와 브리튼군의 충돌"
 ice.26.d:0 "캐나다와 브리튼 모두 레이캬비크에서 진행 중인 투쟁에 개입했는데, 1925년의 생디칼리스트와 왕정파 군이 서로 공격한 이후 처음으로 서로 활발하게 싸우고 있다는 것을 의미합니다. 브리튼인들은 야당을 돕고 있는 반면 캐나다 군대는 정부군을 지원하고 있습니다. 많은 총격이 있을 것으로 보이고 시간만이 누가 이 전투를 이기는지 말해 줄 것입니다."
 ice.26.a:0 "행운을 빈다..."
-ice.26.b:0 "행운을 빈다..."
 ice.27.t:0 "캐나다군 승리"
 ice.27.d:0 "브리튼군과 잠시 동안의 교전 끝에 캐나다군이 승리하였고 우리가 아이슬란드를 방어하는데 도움을 주었습니다. 기막힌 사건의 전개입니다"
 ice.27.a:0 "업무로 복귀하라!"
@@ -175,6 +168,7 @@ ice.33.aa:0 "진보당을 지지한다."
 ice.33.ab:0 "인민통합당과 함께한다!"
 ice.33.ac:0 "독립당을 선출한다."
 ice.33.ad:0 "국민당 만세!"
+ice.33.ae:0 "생디칼리스트가 승리하리라!"
 ice.34.t:0 "사람들이 정부에 참여하다"
 ice.34.d:0 "브리튼의 노동자들의 도움으로, 인민통합당이 아이슬란드를 통제했습니다."
 ice.34.a:0 "노동자들의 영광!"
